feat: Implement symbolic inference and reasoning
This commit introduces the core symbolic reasoning functionality for the SeNARS system. It adds and refines the `Inference` and `LogicEngine` classes to allow for Prolog-style logical deduction within the cognitive cycle.

Key changes:
- Implemented the `Inference` class, which gathers BELIEFs (facts) and SCHEMAs (rules) from memory to dynamically construct a Prolog theory.
- The `Inference` class can now process a logical GOAL, execute it against the theory using the `LogicEngine`, and generate new BELIEF thoughts from the solutions.
- Added a comprehensive unit test suite (`InferenceTest.java`) for the `Inference` class, covering fact-based queries, rule-based inference, and variable substitution.
- Aligned the new tests with existing integration tests, ensuring consistent handling of unquoted Prolog atoms.